hibernate 7 fixes